syntax = "proto3";

package candlerunner;

message Instrument {
    string figi = 1;
    string ticker = 2;
    string display_name = 3;
}

message InstrumentsRequest {}
message InstrumentsResponse {
    repeated Instrument instruments = 1;
}

enum ParamType {
    INSTRUMENT = 0;
    INTEGER = 1;
    FLOAT = 2;
    BOOLEAN = 3;
}

message ParamValue {
    oneof value {
        string figi_val = 1;
        int64 integer_val = 2;
        float float_val = 3;
        bool bool_val = 4;
    }
}

message ParamDefinition {
    string param_name = 1;
    ParamType param_type = 2;
    ParamValue default_value = 3;
}

message StrategyDefinition {
    string strategy_name = 1;
    string description = 2;
    repeated ParamDefinition params = 3;
}

message StrategyDefinitionsRequest {}
message StrategyDefinitionsResponse {
    repeated StrategyDefinition definitions = 1;
}

message Param {
    string param_name = 1;
    ParamValue param_value = 2;
}

message InstantiateStrategyRequest {
    string strategy_name = 1;
    repeated Param params = 2;
}

enum InstantiateStrategyErrorCode {
    NOT_FOUND = 0;
    PARAM_MISSING = 1;
    PARAM_TYPE_MISMATCH = 2;
    FAILED_TO_INSTANTIATE = 3;
}

message InstantiateStrategyError {
    string text = 1;
    InstantiateStrategyErrorCode code = 2;
}

message InstantiateStrategyResponse {
    oneof result {
        string id = 1;
        InstantiateStrategyError error = 2;
    }
}

service CandlerunnerService {
    rpc Instruments (InstrumentsRequest) returns (InstrumentsResponse);
    rpc StrategyDefinitions (StrategyDefinitionsRequest) returns (StrategyDefinitionsResponse);
    rpc InstantiateStrategy (InstantiateStrategyRequest) returns (InstantiateStrategyResponse);
}
